Add endpoint to query all properties
