# lib/models/timeseries.js
@@ -5,8 +5,7 @@ const { InsufficientPermissions } = require('../utils/http_errors')
 const { pool } = require('../utils/pool')
 
 const CredentialsType = 'ACCESS_TOKEN'
-
-const postgresSelectTimeseries = `SELECT
+const PostgresSelectTimeseries = `SELECT
    * 
 FROM
    ts_kv 
@@ -19,8 +18,7 @@ WHERE
    AND ts_kv.ts >= $3
    AND ts_kv.ts <= $4
 `
-
-const postgresSelectLatest = `SELECT
+const PostgresSelectLatest = `SELECT
    * 
 FROM
    ts_kv_latest 
@@ -31,8 +29,17 @@ WHERE
    ts_kv_dictionary.key = $1 
    AND ts_kv_latest.entity_id::text = $2
 `
-
-const postgresSelectDeviceCredentials = `SELECT
+const PostgresSelectAllLatest = `SELECT
+   * 
+FROM
+   ts_kv_latest 
+   JOIN
+      ts_kv_dictionary 
+      ON ts_kv_latest.key = ts_kv_dictionary.key_id 
+WHERE
+  ts_kv_latest.entity_id::text = $1
+`
+const PostgresSelectDeviceCredentials = `SELECT
 * 
 FROM
 device_credentials 
@@ -60,10 +67,11 @@ function getValueFromRow (row, stringifyJson = true) {
 }
 
 async function getDeviceIdFromToken (token) {
-  const result = await pool.query(postgresSelectDeviceCredentials, [
+  const result = await pool.query(PostgresSelectDeviceCredentials, [
     token,
     CredentialsType
   ])
+
   if (result.rowCount === 0) {
     throw new InsufficientPermissions()
   }
@@ -75,28 +83,57 @@ async function getTimeseries (token, name, from, to) {
   const deviceId = await getDeviceIdFromToken(token)
   const client = await pool.connect()
   const stream = client.query(
-    new QueryStream(postgresSelectTimeseries, [name, deviceId, from, to])
+    new QueryStream(PostgresSelectTimeseries, [name, deviceId, from, to])
   )
   stream.on('end', () => client.release())
   return stream
 }
 
-async function getLatest (token, name) {
+async function getLatest (token, name, { includeTimestamps = false } = {}) {
   const deviceId = await getDeviceIdFromToken(token)
-  const result = await pool.query(postgresSelectLatest, [name, deviceId])
+  const result = await pool.query(PostgresSelectLatest, [name, deviceId])
 
   if (result.rowCount === 0) {
     return {}
   }
 
-  return {
-    [name]: getValueFromRow(result.rows[0]),
-    ts: parseInt(result.rows[0].ts)
+  if (includeTimestamps === true) {
+    return {
+      [name]: getValueFromRow(result.rows[0]),
+      ts: parseInt(result.rows[0].ts)
+    }
+  } else {
+    return getValueFromRow(result.rows[0])
   }
 }
 
+async function getAllLatest (token, { includeTimestamps = false } = {}) {
+  const deviceId = await getDeviceIdFromToken(token)
+  const result = await pool.query(PostgresSelectAllLatest, [deviceId])
+
+  if (result.rowCount === 0) {
+    return {}
+  }
+
+  if (includeTimestamps === true) {
+    return result.rows.map((row) => ({
+      [row.key]: getValueFromRow(row),
+      ts: parseInt(row.ts)
+    }))
+  }
+
+  return result.rows.reduce((acc, row) => {
+    const value = getValueFromRow(row)
+    return {
+      ...acc,
+      [row.key]: value
+    }
+  }, {})
+}
+
 exports = module.exports = {
+  getValueFromRow,
   getTimeseries,
   getLatest,
-  getValueFromRow
+  getAllLatest
 }
