# lib/routes/{accessToken}/{name}/latest.js
@@ -2,9 +2,17 @@
 
 const { getLatest } = require('../../../models/timeseries')
 
-async function get (req, res) {
-  const result = await getLatest(req.params.accessToken, req.params.name)
-  res.json(result)
+async function get (req, res, next) {
+  try {
+    const result = await getLatest(
+      req.params.accessToken,
+      req.params.name,
+      req.query
+    )
+    res.json(result)
+  } catch (e) {
+    next(e)
+  }
 }
 
 exports = module.exports = {
